fix: Remove scroll snapping on mobile

--- a/experience-style.css
+++ b/experience-style.css
@@ -215,6 +215,8 @@ body {
 
     padding-left: 3rem;
     padding-right: 3rem;
+
+    scroll-snap-type: none;
   }
 
   .experience-dot {
